tests/paczka1/fuzzy1/40149583.err
Error in line 3: A765 A765 -4,4
Error in line 1: A765 A765 72,2
Error in line 23: A765 A765 70,9
Error in line 25: A765 A990 14,0
Error in line 13: 98dJcjqQ23 S72 66,4
Error in line 26: A765 S439 14,8
Error in line 27: 98dJcjqQ23 A765 76,9
Error in line 33: 98dJcjqQ23 A990 53,6
